New updates again

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 
                 <div class="row">
 
-                    <div class="col-lg-7 col-md-7 col-sm-8">
+                    <div class="col-lg-8 col-md-8 col-sm-8">
                         <form>
                             <div class="form-group">
                                 <input type="text" class="form-control" placeholder="Name">
@@ -358,12 +358,67 @@
                             </div>
 
                             <div class="form-group">
-                                <textarea name="" id="" class="form-control"></textarea>
+                                <textarea name="" id="" class="form-control" placeholder="Your message here"></textarea>
                             </div>
                             <button class="m-btn">Send message</button>
                         </form>
                     </div>
-                    <div class="col-lg-4 col-md-4 col-sm-8"></div>
+                    <div class="col-lg-4 col-md-4 col-sm-8">
+                        <div class="location contact-right">
+                            <svg width="29" height="33" viewBox="0 0 29 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M14.5 2.75C11.5826 2.75 8.78468 3.90893 6.72178 5.97183C4.65888 8.03473 3.49995 10.8326 3.49995 13.75C3.49995 18.0098 6.27159 22.1433 9.31064 25.3512C10.802 26.9255 12.2981 28.2143 13.4229 29.1099C13.8415 29.4432 14.2071 29.7209 14.5 29.9373C14.7928 29.7209 15.1584 29.4432 15.577 29.1099C16.7018 28.2143 18.1979 26.9255 19.6893 25.3512C22.7283 22.1433 25.5 18.0098 25.5 13.75C25.5 10.8326 24.341 8.03473 22.2781 5.97183C20.2152 3.90893 17.4173 2.75 14.5 2.75ZM14.5 31.625C13.7372 32.7691 13.7369 32.7688 13.7365 32.7686L13.7326 32.766L13.7234 32.7598L13.6919 32.7385C13.6651 32.7203 13.6269 32.6942 13.5781 32.6604C13.4804 32.5927 13.3401 32.4942 13.1632 32.3664C12.8095 32.1109 12.3087 31.7381 11.7098 31.2612C10.5143 30.3092 8.91661 28.9339 7.31427 27.2425C4.16582 23.9192 0.749954 19.1152 0.749954 13.75C0.749954 10.1033 2.19861 6.60591 4.77724 4.02728C7.35586 1.44866 10.8532 0 14.5 0C18.1467 0 21.6441 1.44866 24.2227 4.02728C26.8013 6.60591 28.25 10.1033 28.25 13.75C28.25 19.1152 24.8341 23.9192 21.6856 27.2425C20.0833 28.9339 18.4856 30.3092 17.2901 31.2612C16.6912 31.7381 16.1905 32.1109 15.8367 32.3664C15.6598 32.4942 15.5195 32.5927 15.4218 32.6604C15.373 32.6942 15.3348 32.7203 15.308 32.7385L15.2765 32.7598L15.2673 32.766L15.2644 32.7679C15.264 32.7682 15.2627 32.7691 14.5 31.625ZM14.5 31.625L15.2627 32.7691C14.8008 33.077 14.1984 33.0765 13.7365 32.7686L14.5 31.625Z"
+                                    fill="#804DEA" />
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M14.5 11C12.9812 11 11.75 12.2312 11.75 13.75C11.75 15.2688 12.9812 16.5 14.5 16.5C16.0187 16.5 17.25 15.2688 17.25 13.75C17.25 12.2312 16.0187 11 14.5 11ZM8.99996 13.75C8.99996 10.7124 11.4624 8.25 14.5 8.25C17.5375 8.25 20 10.7124 20 13.75C20 16.7876 17.5375 19.25 14.5 19.25C11.4624 19.25 8.99996 16.7876 8.99996 13.75Z"
+                                    fill="#804DEA" />
+                            </svg>
+                            <div class="contact-content">
+                                <h5>Location</h5>
+                                <p>
+
+                                    365 Beverly Hills
+                                    Washington DC, USA.
+                                </p>
+                            </div>
+
+                        </div>
+                        <div class="email contact-right">
+                            <svg width="31" height="25" viewBox="0 0 31 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M4.50009 2.875C3.74698 2.875 3.12509 3.49689 3.12509 4.25V20.75C3.12509 21.5031 3.74698 22.125 4.50009 22.125H26.5001C27.2532 22.125 27.8751 21.5031 27.8751 20.75V4.25C27.8751 3.49689 27.2532 2.875 26.5001 2.875H4.50009ZM0.375092 4.25C0.375092 1.97811 2.2282 0.125 4.50009 0.125H26.5001C28.772 0.125 30.6251 1.97811 30.6251 4.25V20.75C30.6251 23.0219 28.772 24.875 26.5001 24.875H4.50009C2.2282 24.875 0.375092 23.0219 0.375092 20.75V4.25Z"
+                                    fill="#804DEA" />
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M0.623731 3.46149C1.05921 2.83937 1.91657 2.68807 2.53869 3.12355L15.5002 12.1966L28.4617 3.12355C29.0838 2.68807 29.9411 2.83937 30.3766 3.46149C30.8121 4.0836 30.6608 4.94096 30.0387 5.37644L16.2887 15.0014C15.8152 15.3328 15.1851 15.3328 14.7117 15.0014L0.961664 5.37644C0.339547 4.94096 0.188249 4.0836 0.623731 3.46149Z"
+                                    fill="#804DEA" />
+                            </svg>
+
+                            <div class="contact-content">
+                                <h5>Email</h5>
+                                <p>
+                                    kullomodelling@gmail.com
+                                    supportkullomodelling.mail
+                                </p>
+                            </div>
+
+                        </div>
+                        <div class="phone contact-right">
+                            <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path
+                                    d="M26.5 31.4875C26.3625 31.4875 26.225 31.4875 26.0875 31.4875C21.6875 30.9375 17.2875 29.425 13.575 27.0875C10.1375 24.8875 7.11252 21.8625 4.91252 18.425C2.43752 14.7125 0.925016 10.3125 0.512516 5.91255C0.512516 4.81255 0.787516 3.71255 1.47502 2.88755C2.16252 2.06255 3.12502 1.51255 4.22502 1.37505C4.36252 1.37505 4.50002 1.37505 4.63752 1.37505H8.76252C10.825 1.37505 12.6125 2.88755 12.8875 4.95005C13.025 6.18755 13.3 7.42505 13.7125 8.52505C14.2625 10.0375 13.85 11.6875 12.75 12.925L11.7875 13.8875C13.4375 16.3625 15.5 18.5625 18.1125 20.2125L19.075 19.25C20.175 18.15 21.9625 17.7375 23.475 18.2875C24.575 18.7 25.8125 18.975 27.05 19.1125C29.1125 19.3875 30.625 21.175 30.625 23.2375V27.3625C30.625 28.4625 30.2125 29.5625 29.3875 30.25C28.5625 30.9375 27.6 31.4875 26.5 31.4875ZM8.76252 4.12505H4.63752C4.22502 4.12505 3.81252 4.40005 3.53752 4.67505C3.40002 4.95005 3.26252 5.22505 3.26252 5.63755C3.67502 9.62505 5.05002 13.475 7.25002 16.9125C9.31252 20.075 11.925 22.825 15.0875 24.75C18.525 26.95 22.375 28.325 26.3625 28.7375C26.9125 28.7375 27.1875 28.6 27.4625 28.325C27.7375 28.05 27.875 27.775 27.875 27.3625V23.2375C27.875 22.55 27.325 22 26.6375 21.8625C25.2625 21.725 23.8875 21.3125 22.5125 20.7625C21.9625 20.625 21.4125 20.625 21 21.0375L19.2125 22.825C18.8 23.2375 18.1125 23.375 17.5625 23.1C13.85 21.0375 10.825 18.0125 8.76252 14.3C8.62502 13.75 8.76252 13.0625 9.17502 12.65L10.9625 10.8625C11.2375 10.5875 11.375 9.90005 11.2375 9.48755C10.6875 8.11255 10.4125 6.73755 10.1375 5.36255C10.1375 4.67505 9.45002 4.12505 8.76252 4.12505ZM25.125 13.75C24.4375 13.75 23.8875 13.3375 23.75 12.65C23.3375 10.45 21.55 8.80005 19.35 8.25005C18.6625 8.11255 18.1125 7.42505 18.25 6.60005C18.3875 5.91255 19.075 5.36255 19.9 5.50005C23.2 6.18755 25.8125 8.66255 26.3625 11.9625C26.5 12.65 26.0875 13.475 25.2625 13.6125C25.2625 13.6125 25.2625 13.75 25.125 13.75ZM30.625 13.6125C29.9375 13.6125 29.3875 13.0625 29.25 12.375C28.7 7.28755 24.7125 3.30005 19.4875 2.61255C18.8 2.47505 18.25 1.78755 18.25 1.10005C18.25 0.412549 19.075 -0.137451 19.7625 -0.137451C26.225 0.550049 31.175 5.50005 31.8625 11.9625C32 12.65 31.45 13.3375 30.625 13.475C30.7625 13.6125 30.625 13.6125 30.625 13.6125Z"
+                                    fill="#804DEA" />
+                            </svg>
+
+                            <div class="contact-content">
+                                <h5>Phone Number</h5>
+                                <p>
+                                    +191 016 0877 462
+                                    +191 316 0857 480
+                                </p>
+                            </div>
+
+                        </div>
+                    </div>
 
                 </div>
             </section>
