--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </p>
                     <button class="m-btn">Hire a model</button>
                 </div> 
-                <div class="col-lg-6 col-md-6 col-sm-8 hero-right offset-lg-1 d-sm-none d-lg-block d-md-none">
+                <div class="col-lg-6 col-md-6 col-sm-8 hero-right offset-lg-1 offset-md-0 offset-sm-0 d-sm-none d-lg-block d-md-none">
                     <div class="image-bg">
                         <p>
                             <svg width="81" height="29" viewBox="0 0 81 29" fill="none" xmlns="http://www.w3.org/2000/svg">
