--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link rel="stylesheet" href="./css/main.style.css">
 </head>
 <body>
+ 
 
+ 
     <!-- NAV-BAR -->
     <header class="header">
         <!-- <div class="container-fluid custom-container nav-container"> -->
@@ -105,6 +107,8 @@
         </div>
 
     </section>
+
+<div class="container-fluid"></div>
 
     <main>
         
@@ -431,6 +435,8 @@
         </div>
 
     </main>
+
+    </div>
 
     <footer class="footer">
         <div class="container">
