--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="shortcut icon" href="./assets/images/logo/kullo.png">
     <link href="https://fonts.googleapis.com/css2?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="./css//bootstrap-css/bootstrap.css">
-    <link rel="stylesheet" href="./css/main.style.css">
+    <link rel="stylesheet" href="./assets/css//bootstrap-css/bootstrap.css">
+    <link rel="stylesheet" href="./assets/css/main.style.css">
 </head>
 <body>
  
@@ -501,8 +501,8 @@
     </footer>
     
 
-    <script src="./js/bootstrap-js/jquery.js"></script>
-    <script src="./js/bootstrap-js/popper.js"></script>
-    <script src="./js/bootstrap-js/bootstrap.js"></script>
+    <script src="./assets/js/bootstrap-js/jquery.js"></script>
+    <script src="./assets/js/bootstrap-js/popper.js"></script>
+    <script src="./assets/js/bootstrap-js/bootstrap.js"></script>
 </body>
 </html>
