--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kullo</title>
     <link rel="shortcut icon" href="./assets/images/logo/icon2.png">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,100&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./assets/css//bootstrap-css/bootstrap.css">
     <link rel="stylesheet" href="./assets/css/main.style.css">
@@ -386,7 +387,7 @@
                 <h2>From our Blog</h2>
 
                     <div class="row">
-                        <div class="col-lg-4 col-md-4 col-sm-5 mb-4">
+                        <div class="col-lg-4 col-md-4 col-sm-5 mb-6">
                             <div class="card">
                                 <img src="./assets/images/B-runaway.jpg" class="card-img-top" alt="...">
                               
@@ -401,7 +402,7 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-4 col-md-4 col-sm-5 mb-4">
+                        <div class="col-lg-4 col-md-4 col-sm-5 mb-6">
                             <div class="card">
                                 <img src="./assets/images/B-kid.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
@@ -416,7 +417,7 @@
                             </div>
                         </div>
 
-                        <div class="col-lg-4 col-md-4 col-sm-5 mb-4">
+                        <div class="col-lg-4 col-md-4 col-sm-5 mb-6">
                             <div class="card">
                                 <img src="./assets/images/B-maria.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
