navbar active class added

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- <div class="container-fluid custom-container nav-container"> -->
             
             
-            <nav class="navbar navbar-toggleable-md navbar-expand-md navbar-expand-lg fixed-top navbar-light py-1">
+            <nav class="navbar navbar-toggleable-md navbar-expand-md navbar-expand-lg navbar-light py-1" id="nav__div">
                 <div class="container">
 
                 <a class="navbar-brand" href="index.html">
@@ -593,5 +593,6 @@
     <script src="./assets/js/bootstrap-js/jquery.js"></script>
     <script src="./assets/js/bootstrap-js/popper.js"></script>
     <script src="./assets/js/bootstrap-js/bootstrap.js"></script>
+    <script src="./assets/js/main.js"></script>
 </body>
 </html>
